# Verilog-synthesis

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md
.github/workflows/: rust.yml
src/: main.rs  test.rs  verilog_analysis.rs  verilog_synthesis.rs
verilog/: syn_test.v  top.sv
