[package]
name = "verilog_synthesis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
same-file = "1"
regex = "1"
string-builder = "0.2.0"
chrono = "0.4.23"
tokio = { version = "1.12", features = ["macros", "fs", "rt-multi-thread"] }
warp = "0.3"
uuid = { version = "0.8", features = ["v4"] }
futures = { version = "0.3", default-features = false }
bytes = "1.0"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'
